chore: keep intermediate changes

--- a/kb.html
+++ b/kb.html
@@ -46,17 +46,18 @@ html,body{margin:0;height:100%}
  width: 300px;
  height: 50px;
  /* #4d4d4d30 */
- background: #00000005;
+ /* #0000001a */
+ background: #0000000a;
  top: 315px;
  backdrop-filter: blur(20px) saturate(1.8) url("#keyboardMatrix");
- animation: moveUpDown 2s ease-in-out infinite;
+ /*animation: moveUpDown 2s ease-in-out infinite;*/
 }
 
 </style>
 </head>
 <body>
 
-  <img src="./screen4.png" style="width:300px">
+  <img src="./screen3.png" style="width:300px">
   <div class="accessory"></div>
 
 </body>
